[package]
name = "mlua-luau-runtime"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/lune-org/mlua-luau-runtime"
description = "Luau-based async runtime, using mlua and async-executor"
readme = "README.md"
keywords = ["async", "luau", "runtime"]
categories = ["async"]

[dependencies]
async-executor = "1.8"
concurrent-queue = "2.4"
event-listener = "4.0"
futures-lite = "2.2"

mlua = { version = "0.9.5", features = [
    "luau",
    "luau-jit",
    "async",
    "serialize",
] }

[dev-dependencies]
async-fs = "2.1"
async-io = "2.3"

[lints.clippy]
all = { level = "deny", priority = -3 }
cargo = { level = "warn", priority = -2 }
pedantic = { level = "warn", priority = -1 }

[lib]
path = "lib/lib.rs"

[[example]]
name = "basic_sleep"
test = true

[[example]]
name = "basic_spawn"
test = true

[[example]]
name = "callbacks"
test = true

[[example]]
name = "lots_of_threads"
test = true

[[example]]
name = "scheduler_ordering"
test = true
